samples/_failures_safe/1761649179_51a409_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6acc1b0c.c: In function ‘main’:
./samples/SAFE/__tmp_6acc1b0c.c:143:15: error: missing terminating " character
  143 |     if (scanf("%zu %zu
      |               ^~~~~~~~
./samples/SAFE/__tmp_6acc1b0c.c:143:5: error: expected expression at end of input
  143 |     if (scanf("%zu %zu
      |     ^~
./samples/SAFE/__tmp_6acc1b0c.c:143:5: error: expected declaration or statement at end of input
